# Awki

./: .gitignore  .gitmodules  CMakeLists.txt  Generate Project Files VS2022.bat  Generate Project Files VS2026.bat  README.md
CMake/: BuildExternalProjects.cmake  BuildThirdPartyLibraries.cmake
Source/Engine/: Awki.h  CMakeLists.txt
Source/Engine/Core/: Assert.cpp  Assert.h  Engine.cpp  Engine.h  Log.cpp  Log.h  Version.h
Source/Engine/Platform/: Events.cpp  Events.h  Interop.h  Window.cpp  Window.h
Source/Engine/RHI/: Device.cpp  Device.h  PipelineStates.h  Swapchain.cpp  Swapchain.h
Source/Engine/RHI/CommandBuffer/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferAllocator.cpp
Source/Engine/RHI/CommandBuffers/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferAllocator.h
Source/Engine/RHI/Device/: GfxDevice.cpp  GfxDevice.h
Source/Engine/RHI/Swapchain/: GfxSwapchain.h
Source/Engine/RHI/Texture/: Texture.cpp  Texture.h
Source/Engine/RHI/Textures/: PixelFormats.h  Texture.cpp  Texture.h
Source/Engine/Utilities/: Enum.h  ForwardStorage.h  Macros.h
Source/Game/: main.cpp
